2009-09-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Semantic
	  highlighting requires to purge the layout cache, when the
	  parser updates to reflect semantic changes.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  537761 - Keystrokes not working on texteditor like "CTRL +
	  X|Y to trigger Foo action...'.

2009-09-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Check that
	  help is supported before trying to show it.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  540487 - Event handler anon delegate completion puts caret
	  in wrong place'.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Removed code
	  duplication/fixed folding commands.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Renamed
	  IDomVisitable -> INode

2009-09-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs: fixed inner
	  type sorting.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs: quick class
	  browser now shows full inner type name.

2009-09-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Only set the
	  search engine, when the option is changed.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Added some
	  error handling code.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Corrected
	  caret position after format.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on
	  formatting.

2009-09-15  Mike Krüger  <mkrueger@novell.com>
