@@ -1,5 +1,10 @@
 2009-09-23  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed menu
+	  positioning.
+
+2009-09-23  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Semantic
 	  highlighting requires to purge the layout cache, when the
 	  parser updates to reflect semantic changes.
